# iot-mobile-communication

./: .gitignore  LICENSE  README.md
android-serial/app/: build.gradle  proguard-rules.pro
android-serial/app/src/androidTest/java/com/digitalmoo/androidserialdemo/: ExampleInstrumentedTest.java
android-serial/app/src/main/: AndroidManifest.xml
android-serial/app/src/main/java/com/digitalmoo/androidserialdemo/ui/activity/: MainActivity.java
android-serial/app/src/main/java/com/digitalmoo/androidserialdemo/ui/fragment/usb_device/: UsbDeviceFragment.java
android-serial/app/src/main/java/com/digitalmoo/androidserialdemo/ui/fragment/usb_device_list/: UsbDeviceListFragment.java  UsbDeviceRecyclerViewAdapter.java
android-serial/app/src/main/res/layout/: activity_main.xml  fragment_usbdevice.xml  fragment_usbdevice_list.xml  list_item_usb_device.xml
android-serial/app/src/main/res/values/: strings.xml
android-serial/app/src/test/java/com/digitalmoo/androidserialdemo/: ExampleUnitTest.java
android-serial/arduino/serial_port_blink/: serial_port_blink.ino
ios-to-desktop/desktop-client/: CMakeLists.txt  ios-interop.cpp
ios-to-desktop/ios-server/SwiftServer/: AppDelegate.swift  ViewController.swift
ios-to-desktop/ios-server/SwiftServer.xcodeproj/: project.pbxproj
ios-to-desktop/ios-server/SwiftServer/Base.lproj/: Main.storyboard
